cargo-features = ["edition"]

[package]
name = "com-impl"
version = "0.1.0"
authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
edition = "2018"

[dependencies]
com-impl-macro = { git = "https://github.com/simulasi2/com-impl-macro" }

[dev-dependencies.winapi]
version = "0.3"
features = [
    "winerror",
    "unknwnbase",
    "dxgi",
]
